2012-04-13  Jer Noble  <jer.noble@apple.com>

        Video at apple.com gets standard controls in addition to custom controls after returning from full screen
        https://bugs.webkit.org/show_bug.cgi?id=83939

        Reviewed by Eric Carlson.

        So that the media controls don't show up momentarily during full screen animations, call setAnimatingFullScreen(true)
        before calling will{Enter,Exit}FullScreen(), so that the CSS rule for full screen animation will be in effect
        immediately.

        Similarly, call setAnimatingFullScreen(false) after calling did{Enter,Exit}FullScreen, so that the full screen media
        controls don't momentarily appear at the end of an animation.

        * UIProcess/mac/WKFullScreenWindowController.mm:
        (-[WKFullScreenWindowController enterFullScreen:]):
        (-[WKFullScreenWindowController finishedEnterFullScreenAnimation:]):
        (-[WKFullScreenWindowController exitFullScreen]):
        (-[WKFullScreenWindowController finishedExitFullScreenAnimation:]):

2012-04-13  Anders Carlsson  <andersca@apple.com>

        Make sure that we're using the right compiler for generating derived sources.

        Rubber-stamped by Dan Bernstein.

        * WebKit2.xcodeproj/project.pbxproj:

2012-04-13  Anders Carlsson  <andersca@apple.com>

        Include the error if we fail to initialize the web process sandbox
        https://bugs.webkit.org/show_bug.cgi?id=83927

        Reviewed by Alexey Proskuryakov.

        * WebProcess/mac/WebProcessMac.mm:
        (WebKit::initializeSandbox):

2012-04-13  Brady Eidson  <beidson@apple.com>

        <rdar://problem/11176921> and https://bugs.webkit.org/show_bug.cgi?id=83600
        Need WebKit2 API to notify whether history loads are in the page cache

        - Add a new WKBundlePageLoaderClient callback allowing the bundle to be notified
          of back/forward navigations (and deny them if it chooses)